app/assets/scss/modules/_hero.scss
.hero {
	width: 100%;
	max-width: 1440px;
	padding: 40px 0 80px;
	margin: 0 auto;
	background-size: cover;
	background-position: 50% 50%;

	@media (min-width: $bp-medium) {
		padding-left: 16px;
		padding-right: 16px;
	}

	@media (min-width: $bp-large) {
		min-height: 500px;
	}

	&__banner {
		max-width: 500px;
		padding: 20px 20px 8px;
		font-size: 16px;
		background: $md-primary;
		color: $md-primary-text;

		h1 {
			position: relative;
			font-size: 36px;
			font-weight: 300;
			line-height: 1.1;
			padding-top: 12px;
			padding-bottom: 24px;
			border-bottom: 1px inset rgba(255, 255, 255, .12);
			margin: 0 0 4px;

			&::before {
				content: '';
				position: absolute;
				top: -8px;
				height: 4px;
				width: 65px;
				background: rgba(255, 255, 255, .7);
			}
		}

		.md-button {
			font-size: 18px;

			md-icon {
				height: 22px;
				width: 22px;
				margin-left: 2px;
				margin-bottom: 2px;
				color: $md-primary-text;
			}
		}
	}
}

